--- a/page2.html
+++ b/page2.html
@@ -75,8 +75,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXJihgy4z-modal" data-bs-target="#tfXJihgy4z-modal">
-                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXKfwvorK-modal" data-bs-target="#tfXKfwvorK-modal">
+                    <img class="w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -84,8 +84,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Mobile Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXJihgy4z-modal" data-bs-target="#tfXJihgy4z-modal">
-                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXKfwvorK-modal" data-bs-target="#tfXKfwvorK-modal">
+                    <img class="w-100" src="assets/images/mbr-3.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -93,8 +93,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Polygraphic Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXJihgy4z-modal" data-bs-target="#tfXJihgy4z-modal">
-                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXKfwvorK-modal" data-bs-target="#tfXKfwvorK-modal">
+                    <img class="w-100" src="assets/images/mbr-4.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -102,8 +102,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>Web Design</strong></h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXJihgy4z-modal" data-bs-target="#tfXJihgy4z-modal">
-                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z">
+                <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#tfXKfwvorK-modal" data-bs-target="#tfXKfwvorK-modal">
+                    <img class="w-100" src="assets/images/mbr-6.jpg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -112,11 +112,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tfXJihgy4z-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="tfXKfwvorK-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-tfXJihgy4z" data-interval="5000" data-bs-interval="5000">
+                        <div class="carousel slide" id="lb-tfXKfwvorK" data-interval="5000" data-bs-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/mbr-596x397.jpg" alt="Mobirise Website Builder">
@@ -132,18 +132,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z"></li>
-                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z"></li>
-                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z"></li>
-                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tfXJihgy4z" data-bs-target="#lb-tfXJihgy4z"></li>
+                                <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK"></li>
+                                <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK"></li>
+                                <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK"></li>
+                                <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-tfXKfwvorK" data-bs-target="#lb-tfXKfwvorK"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tfXJihgy4z">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" data-bs-slide="prev" href="#lb-tfXKfwvorK">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tfXJihgy4z">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" data-bs-slide="next" href="#lb-tfXKfwvorK">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only visually-hidden">Next</span>
                             </a>
@@ -170,7 +170,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">HTML5 Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Free Offline Site Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
